UPD: notebooks format

--- a/notebooks/.ipynb/ML_on_Edge.ipynb
+++ b/notebooks/.ipynb/ML_on_Edge.ipynb
@@ -356,7 +356,7 @@
     "id": "R_He1Fo2ku05",
     "outputId": "00c02f4c-26f8-445e-b21c-ca75f4db906f",
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
@@ -574,7 +574,7 @@
    "metadata": {
     "id": "crymzcQXl6T1",
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -592,7 +592,7 @@
     "id": "Ju-V0RMel5lQ",
     "outputId": "22fe73d2-1de9-4f85-aa6d-5041fdd607a4",
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
