--- a/notebooks/.ipynb/PCA_QDA_LDA.ipynb
+++ b/notebooks/.ipynb/PCA_QDA_LDA.ipynb
@@ -3,16 +3,14 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "lIV-VH5XThkM"
+    "id": "lIV-VH5XThkM",
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
-    "# Home Assignment #2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Home Assignment #2\n",
+    "![](https://scikit-learn.org/0.15/_images/plot_lda_qda_0012.png)\n",
     "## Ehsan Shaghaei\n",
     "> Nov 22"
    ]
@@ -20,7 +18,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "tD4mewy2wVo8"
+    "id": "tD4mewy2wVo8",
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "source": [
     "Furter, PCA is used for dimensionality reduction, so **it is prohibited** to have `n_components` equal to `n_features`."
@@ -29,7 +30,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "zkUamcwmTxJj"
+    "id": "zkUamcwmTxJj",
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "source": [
     "## Task 1. PCA drawbacks (3 points)\n",
@@ -129,6 +133,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "colab": {
    "collapsed_sections": [],
    "provenance": []
